add_executable( Log.test Log.test.cpp )
set( test_flags ${Log_compiler_flags} )
separate_arguments( test_flags_list UNIX_COMMAND "${test_flags}" )
foreach( flag IN LISTS test_flags_list )
    target_compile_options( Log.test PUBLIC ${flag} )
endforeach( flag )
set_target_properties( Log.test PROPERTIES LINK_FLAGS "${test_flags}" )
target_link_libraries( Log.test PUBLIC Log )
add_test( NAME Log COMMAND Log.test ) 
